--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,12 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http:3.144.230.205:5000/</sonar.host.url>
-		<sonar.login>51a6e8d01b5259a0328fa455a7737705d6ae91f5</sonar.login>
+		<sonar.login>admin</sonar.login>
+		<sonar.password>admin@123</sonar.password>
+		
 <!--	
-	<sonar.password>admin</sonar.password>
+<sonar.login>51a6e8d01b5259a0328fa455a7737705d6ae91f5</sonar.login>	
+<sonar.password>admin</sonar.password>
 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
