--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http:3.144.230.205:5000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
-		<sonar.password>admin@123</sonar.password>
+		<sonar.password>admin123</sonar.password>
 		
 <!--	
 <sonar.login>51a6e8d01b5259a0328fa455a7737705d6ae91f5</sonar.login>	
