--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 		<jdk.version>1.8</jdk.version>
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
-		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http:172.31.9.130:5000/</sonar.host.url>
+		<log4j.version>1.2.17</log4j.version>		
+		<sonar.host.url>http://18.220.108.122:5666/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin123</sonar.password>
 		
